Fix mobile overflow scroll for pagination goign to large

--- a/cncnet-api/public/css/app.css
+++ b/cncnet-api/public/css/app.css
@@ -23987,7 +23987,6 @@ body.loaded .material-symbols-outlined {
 .games-table .player-points {
   display: flex;
   align-items: center;
-  padding-top: 1rem;
   text-align: center;
   justify-content: center;
 }
@@ -23998,14 +23997,14 @@ body.loaded .material-symbols-outlined {
   }
 }
 
-@media (max-width: 768px) {
-  .games-table .td-player .player-faction {
-    width: 20%;
-  }
-}
 .games-table .td-player .player-faction {
-  width: 65px;
-  height: 33px;
+  width: 20%;
+}
+@media (min-width: 768px) {
+  .games-table .td-player .player-faction {
+    width: 65px;
+    height: 33px;
+  }
 }
 
 .games-table .td-versus {
